[package]
name = "assert_ok"
version = "1.0.2"
edition = "2018"
authors = ["Jack Lloyd <jack@randombit.net>"]
repository = "https://github.com/randombit/assert_ok"
description = "A macro that asserts a Result is Ok"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["macro", "testing", "utility"]
